--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -193,7 +193,7 @@ border-color: #34495E;
 
 #menusup {
     height: 49px;
-
+    max-width: 474px;
     nav {
         border-bottom:0;
         margin-bottom:0;
