--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -160,7 +160,7 @@ ul.icons li [class*=" fa-icon-"] {
 /* line 150, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: 0.2em 0.25em 0.15em;
+  padding: .2em .25em .15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -1688,9 +1688,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #cccccc;
-  border-right: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -1744,15 +1744,15 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px "Open Sans", serif;
-  text-shadow: 0 1px white;
+  font: 13px/18px 'Open Sans', serif;
+  text-shadow: 0 1px #FFFFFF;
   border: 0 none;
 }
 
 /* line 11, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
 }
 
 /* line 15, ../scss/_maxui.scss */
@@ -1775,7 +1775,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 25, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 white;
+  background: none repeat scroll 0 0 #FFFFFF;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -1784,7 +1784,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 32, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   padding: 10px;
   position: relative;
 }
@@ -1795,7 +1795,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -1809,7 +1809,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 53, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -1818,9 +1818,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 59, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #b2b2b2;
+  border: 1px solid #B2B2B2;
   color: #666666;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -1871,7 +1871,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 101, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -1885,7 +1885,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 111, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #f58d3d;
+  background: none repeat scroll 0 0 #F58D3D;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -1908,13 +1908,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 130, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #e5e5e5;
+  background: none repeat scroll 0 0 #E5E5E5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px white;
+  text-shadow: 0 1px #FFFFFF;
 }
 
 /* line 139, ../scss/_maxui.scss */
@@ -1924,7 +1924,7 @@ input.maxui-button[disabled] {
 
 /* line 142, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #f58d3d !important;
+  border: 1px solid #F58D3D !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -1955,14 +1955,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #DDDDDD;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2162,12 +2162,12 @@ li > a#plone-contentmenu-workflow {
 /* line 26, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 31, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 34, ../scss/ulearn.scss */
@@ -2272,7 +2272,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #dddddd;
+  box-shadow: -1px 1px 2px #ddd;
 }
 
 /* line 121, ../scss/ulearn.scss */
@@ -2309,7 +2309,7 @@ input[type="text"]:focus {
 
 /* line 138, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
 }
 
 /* line 141, ../scss/ulearn.scss */
@@ -2331,7 +2331,7 @@ input[type="text"]:focus {
 
 /* line 153, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -2347,7 +2347,7 @@ input[type="text"]:focus {
 /* line 164, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eeeeee;
+  border-left: 1px solid #eee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -2357,7 +2357,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
 
@@ -2383,7 +2383,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-right: 4px;
   width: 60px;
-  transition: all 0.1s ease 0s;
+  transition: all 0.10s ease 0s;
 }
 
 /* line 192, ../scss/ulearn.scss */
@@ -2492,96 +2492,100 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   margin-bottom: 0;
 }
 /* line 292, ../scss/ulearn.scss */
 #day .arrow {
   border-left-color: #f58d3d;
 }
+/* line 293, ../scss/ulearn.scss */
+#day .bubble-content {
+  padding: 9px;
+}
 
-/* line 295, ../scss/ulearn.scss */
+/* line 296, ../scss/ulearn.scss */
 #day p {
   margin: 0;
 }
 
-/* line 296, ../scss/ulearn.scss */
+/* line 297, ../scss/ulearn.scss */
 .data {
   font-size: 13px;
   padding-top: 6px;
 }
 
-/* line 298, ../scss/ulearn.scss */
+/* line 299, ../scss/ulearn.scss */
 #agenda {
   background: #f5f5f5;
   font-size: 12px;
   margin-top: 10px;
 }
 
-/* line 304, ../scss/ulearn.scss */
+/* line 305, ../scss/ulearn.scss */
 #esdev {
   line-height: 13px;
   padding: 8px 4px 0 2px;
   margin-bottom: 0;
 }
-/* line 309, ../scss/ulearn.scss */
+/* line 310, ../scss/ulearn.scss */
 #esdev .vertical_aligned {
   display: table;
   height: 62px;
 }
-/* line 310, ../scss/ulearn.scss */
+/* line 311, ../scss/ulearn.scss */
 #esdev a {
   display: table-cell;
   vertical-align: middle;
 }
 
-/* line 313, ../scss/ulearn.scss */
+/* line 314, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
 }
-/* line 319, ../scss/ulearn.scss */
+/* line 320, ../scss/ulearn.scss */
 #calendari td {
   text-align: center;
 }
 
-/* line 324, ../scss/ulearn.scss */
+/* line 325, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #eae9e4;
+  background: none repeat scroll 0 0 #EAE9E4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
 }
 
-/* line 332, ../scss/ulearn.scss */
+/* line 333, ../scss/ulearn.scss */
 #box_agenda .newevent {
   margin-top: 15px;
 }
 
-/* line 335, ../scss/ulearn.scss */
+/* line 336, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 336, ../scss/ulearn.scss */
+/* line 337, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 337, ../scss/ulearn.scss */
+/* line 338, ../scss/ulearn.scss */
 .event {
   text-shadow: none;
 }
 
-/* line 338, ../scss/ulearn.scss */
+/* line 339, ../scss/ulearn.scss */
 .event:hover {
   background: #fff;
 }
 
-/* line 339, ../scss/ulearn.scss */
+/* line 340, ../scss/ulearn.scss */
 .todayevent {
   background: #007BC0;
   text-shadow: none;
@@ -2589,45 +2593,45 @@ input[type="text"]:focus {
   border-radius: 2px;
 }
 
-/* line 340, ../scss/ulearn.scss */
+/* line 341, ../scss/ulearn.scss */
 .event a {
   color: #555;
   font-weight: normal;
 }
 
-/* line 341, ../scss/ulearn.scss */
+/* line 342, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 343, ../scss/ulearn.scss */
+/* line 344, ../scss/ulearn.scss */
 #box_valorats ul, #box_comentaris ul {
   margin-top: 10px;
   margin-left: 25px;
 }
 
-/* line 345, ../scss/ulearn.scss */
+/* line 346, ../scss/ulearn.scss */
 #box_valorats li a:hover, #box_comentaris li a:hover {
   text-decoration: underline;
 }
 
-/* line 347, ../scss/ulearn.scss */
+/* line 348, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
   padding-bottom: 8px;
 }
 
-/* line 354, ../scss/ulearn.scss */
+/* line 355, ../scss/ulearn.scss */
 #box_valorats i, #box_comentaris i {
   color: #34495E;
   font-size: 15px;
   vertical-align: middle;
 }
 
-/* line 360, ../scss/ulearn.scss */
+/* line 361, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2650,7 +2654,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 385, ../scss/ulearn.scss */
+/* line 386, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -2661,22 +2665,22 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
-/* line 390, ../scss/ulearn.scss */
+/* line 391, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   color: white;
   padding-left: 10px;
   padding-right: 5px;
   text-shadow: none;
 }
 
-/* line 397, ../scss/ulearn.scss */
+/* line 398, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   opacity: 0.8;
 }
 
-/* line 402, ../scss/ulearn.scss */
+/* line 403, ../scss/ulearn.scss */
 #communitylist {
   padding: 10px;
   font-size: 13px;
@@ -2684,7 +2688,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0px white;
   background: #f9f9f9;
 }
-/* line 409, ../scss/ulearn.scss */
+/* line 410, ../scss/ulearn.scss */
 #communitylist .eines {
   color: #34495E;
   float: right;
@@ -2692,16 +2696,16 @@ input[type="text"]:focus {
   margin: 0 10px 50px;
   text-decoration: none;
 }
-/* line 417, ../scss/ulearn.scss */
+/* line 418, ../scss/ulearn.scss */
 #communitylist ul {
   margin-left: 0;
   list-style: none;
 }
-/* line 422, ../scss/ulearn.scss */
+/* line 423, ../scss/ulearn.scss */
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
@@ -2709,73 +2713,74 @@ input[type="text"]:focus {
   background: #f9f9f9;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
-/* line 434, ../scss/ulearn.scss */
+/* line 435, ../scss/ulearn.scss */
 #communitylist a {
   color: #555;
   text-decoration: none;
 }
-/* line 438, ../scss/ulearn.scss */
+/* line 439, ../scss/ulearn.scss */
 #communitylist a h4 {
   color: #F58D3D;
   font-size: 16px;
   margin-bottom: 0;
   margin-top: 0;
 }
-/* line 444, ../scss/ulearn.scss */
+/* line 445, ../scss/ulearn.scss */
 #communitylist a h4:hover {
   opacity: 0.8;
 }
-/* line 448, ../scss/ulearn.scss */
+/* line 449, ../scss/ulearn.scss */
 #communitylist img {
   margin-right: 15px;
   margin-top: 3px;
   border: 2px solid white;
   max-width: 54px;
 }
-/* line 454, ../scss/ulearn.scss */
+/* line 455, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #f58d3d;
+  border: 2px solid #F58D3D;
 }
-/* line 457, ../scss/ulearn.scss */
+/* line 458, ../scss/ulearn.scss */
 #communitylist .item {
   margin-right: 50px;
 }
 
-/* line 462, ../scss/ulearn.scss */
+/* line 463, ../scss/ulearn.scss */
 .icon-ulearn-community, .icon-ulearn.community {
   background-position: -312px -192px;
 }
 
-/* line 464, ../scss/ulearn.scss */
+/* line 465, ../scss/ulearn.scss */
 #listing-table a.contenttype-ulearn-community:before,
 .template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
   background-position: -312px -192px;
 }
 
-/* line 468, ../scss/ulearn.scss */
+/* line 469, ../scss/ulearn.scss */
 #box_perfil .span9 {
   overflow-y: hidden;
   height: 150px;
 }
 
-/* line 469, ../scss/ulearn.scss */
+/* line 470, ../scss/ulearn.scss */
 #box_community img {
   width: 200px;
 }
 
-/* line 471, ../scss/ulearn.scss */
+/* line 472, ../scss/ulearn.scss */
 #searchcommunities {
   margin-right: auto;
   margin-left: auto;
   width: 300px;
 }
 
-/* line 474, ../scss/ulearn.scss */
+/* line 475, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
-  padding: 6px 0px;
+
+  width: 49px;
 }
-/* line 476, ../scss/ulearn.scss */
+/* line 477, ../scss/ulearn.scss */
 #box_comunitats .bubble a {
   background: none repeat scroll 0 0 #f58d3d;
   padding: 6px 14px;
@@ -2785,68 +2790,68 @@ input[type="text"]:focus {
   text-align: center;
   width: 33px;
 }
-/* line 486, ../scss/ulearn.scss */
+/* line 487, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 489, ../scss/ulearn.scss */
+/* line 490, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
 
-/* line 492, ../scss/ulearn.scss */
+/* line 493, ../scss/ulearn.scss */
 .bubble.top .arrow:after {
   border-top-color: transparent;
 }
 
-/* line 493, ../scss/ulearn.scss */
+/* line 494, ../scss/ulearn.scss */
 .bubble.right .arrow:after {
   border-right-color: transparent;
 }
 
-/* line 494, ../scss/ulearn.scss */
+/* line 495, ../scss/ulearn.scss */
 .bubble.left .arrow:after {
   border-left-color: transparent;
 }
 
-/* line 497, ../scss/ulearn.scss */
+/* line 498, ../scss/ulearn.scss */
 #box_stats .bubble-content {
   padding: 5px 12px;
   text-align: center;
 }
-/* line 498, ../scss/ulearn.scss */
+/* line 499, ../scss/ulearn.scss */
 #box_stats .bubble {
   background-color: #344961;
   color: white;
   width: 60px;
 }
-/* line 502, ../scss/ulearn.scss */
+/* line 503, ../scss/ulearn.scss */
 #box_stats .bubble .arrow {
   border-left-color: #344961;
 }
-/* line 504, ../scss/ulearn.scss */
+/* line 505, ../scss/ulearn.scss */
 #box_stats p {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #bbb;
   font-weight: bold;
 }
-/* line 510, ../scss/ulearn.scss */
+/* line 511, ../scss/ulearn.scss */
 #box_stats ul {
   margin-top: 5px;
 }
-/* line 511, ../scss/ulearn.scss */
+/* line 512, ../scss/ulearn.scss */
 #box_stats li {
   margin-bottom: 5px;
 }
 
-/* line 517, ../scss/ulearn.scss */
+/* line 518, ../scss/ulearn.scss */
 #addModal .modal-body {
   max-height: 426px;
 }
-/* line 518, ../scss/ulearn.scss */
+/* line 519, ../scss/ulearn.scss */
 #addModal #content-core {
   height: 426px;
 }
