--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -160,7 +160,7 @@ ul.icons li [class*=" fa-icon-"] {
 /* line 150, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -1688,9 +1688,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #cccccc;
+  border-right: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -1744,15 +1744,15 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px 'Open Sans', serif;
-  text-shadow: 0 1px #FFFFFF;
+  font: 13px/18px "Open Sans", serif;
+  text-shadow: 0 1px white;
   border: 0 none;
 }
 
 /* line 11, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
 }
 
 /* line 15, ../scss/_maxui.scss */
@@ -1775,7 +1775,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 25, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -1784,7 +1784,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 32, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   padding: 10px;
   position: relative;
 }
@@ -1795,7 +1795,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -1809,7 +1809,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 53, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -1818,9 +1818,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 59, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #B2B2B2;
+  border: 1px solid #b2b2b2;
   color: #666666;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -1871,7 +1871,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 101, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -1885,7 +1885,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 111, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #F58D3D;
+  background: none repeat scroll 0 0 #f58d3d;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -1908,13 +1908,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 130, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #E5E5E5;
+  background: none repeat scroll 0 0 #e5e5e5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px #FFFFFF;
+  text-shadow: 0 1px white;
 }
 
 /* line 139, ../scss/_maxui.scss */
@@ -1924,7 +1924,7 @@ input.maxui-button[disabled] {
 
 /* line 142, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #F58D3D !important;
+  border: 1px solid #f58d3d !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -1955,14 +1955,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #DDDDDD;
+  border-top: 1px solid #dddddd;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2162,12 +2162,12 @@ li > a#plone-contentmenu-workflow {
 /* line 26, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 31, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 34, ../scss/ulearn.scss */
@@ -2272,7 +2272,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #ddd;
+  box-shadow: -1px 1px 2px #dddddd;
 }
 
 /* line 121, ../scss/ulearn.scss */
@@ -2309,7 +2309,7 @@ input[type="text"]:focus {
 
 /* line 138, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
 }
 
 /* line 141, ../scss/ulearn.scss */
@@ -2331,7 +2331,7 @@ input[type="text"]:focus {
 
 /* line 153, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -2347,7 +2347,7 @@ input[type="text"]:focus {
 /* line 164, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eee;
+  border-left: 1px solid #eeeeee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -2357,7 +2357,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   width: 33px;
 }
 
@@ -2383,7 +2383,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-right: 4px;
   width: 60px;
-  transition: all 0.10s ease 0s;
+  transition: all 0.1s ease 0s;
 }
 
 /* line 192, ../scss/ulearn.scss */
@@ -2492,7 +2492,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   margin-bottom: 0;
 }
 /* line 292, ../scss/ulearn.scss */
@@ -2541,7 +2541,7 @@ input[type="text"]:focus {
 
 /* line 314, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -2553,7 +2553,7 @@ input[type="text"]:focus {
 
 /* line 325, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #EAE9E4;
+  background: none repeat scroll 0 0 #eae9e4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -2617,7 +2617,7 @@ input[type="text"]:focus {
 
 /* line 348, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
@@ -2667,7 +2667,7 @@ input[type="text"]:focus {
 
 /* line 391, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   color: white;
   padding-left: 10px;
   padding-right: 5px;
@@ -2676,7 +2676,7 @@ input[type="text"]:focus {
 
 /* line 398, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   opacity: 0.8;
 }
 
@@ -2705,7 +2705,7 @@ input[type="text"]:focus {
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
@@ -2739,7 +2739,7 @@ input[type="text"]:focus {
 /* line 455, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #F58D3D;
+  border: 2px solid #f58d3d;
 }
 /* line 458, ../scss/ulearn.scss */
 #communitylist .item {
@@ -2777,81 +2777,80 @@ input[type="text"]:focus {
 
 /* line 475, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
-
-  width: 49px;
-}
-/* line 477, ../scss/ulearn.scss */
-#box_comunitats .bubble a {
+  padding: 6px 0px;
+  width: 40px;
+  text-align: center;
   background: none repeat scroll 0 0 #f58d3d;
-  padding: 6px 14px;
+}
+/* line 482, ../scss/ulearn.scss */
+#box_comunitats .bubble a {
   color: white;
   font-weight: 600;
   height: 18px;
-  text-align: center;
   width: 33px;
 }
-/* line 487, ../scss/ulearn.scss */
+/* line 490, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 490, ../scss/ulearn.scss */
+/* line 493, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
 
-/* line 493, ../scss/ulearn.scss */
+/* line 496, ../scss/ulearn.scss */
 .bubble.top .arrow:after {
   border-top-color: transparent;
 }
 
-/* line 494, ../scss/ulearn.scss */
+/* line 497, ../scss/ulearn.scss */
 .bubble.right .arrow:after {
   border-right-color: transparent;
 }
 
-/* line 495, ../scss/ulearn.scss */
+/* line 498, ../scss/ulearn.scss */
 .bubble.left .arrow:after {
   border-left-color: transparent;
 }
 
-/* line 498, ../scss/ulearn.scss */
+/* line 501, ../scss/ulearn.scss */
 #box_stats .bubble-content {
   padding: 5px 12px;
   text-align: center;
 }
-/* line 499, ../scss/ulearn.scss */
+/* line 502, ../scss/ulearn.scss */
 #box_stats .bubble {
   background-color: #344961;
   color: white;
   width: 60px;
 }
-/* line 503, ../scss/ulearn.scss */
+/* line 506, ../scss/ulearn.scss */
 #box_stats .bubble .arrow {
   border-left-color: #344961;
 }
-/* line 505, ../scss/ulearn.scss */
+/* line 508, ../scss/ulearn.scss */
 #box_stats p {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #bbb;
   font-weight: bold;
 }
-/* line 511, ../scss/ulearn.scss */
+/* line 514, ../scss/ulearn.scss */
 #box_stats ul {
   margin-top: 5px;
 }
-/* line 512, ../scss/ulearn.scss */
+/* line 515, ../scss/ulearn.scss */
 #box_stats li {
   margin-bottom: 5px;
 }
 
-/* line 518, ../scss/ulearn.scss */
+/* line 521, ../scss/ulearn.scss */
 #addModal .modal-body {
   max-height: 426px;
 }
-/* line 519, ../scss/ulearn.scss */
+/* line 522, ../scss/ulearn.scss */
 #addModal #content-core {
   height: 426px;
 }
