--- a/ulearn/theme/scss/_maxui.scss
+++ b/ulearn/theme/scss/_maxui.scss
@@ -3,10 +3,11 @@
 //   ==========================================================================
 
 #maxui-container {
-    color: #444444;
-    font: 13px/18px 'Open Sans', serif;
-    text-shadow: 0 1px #FFFFFF;
+   color: #444444;
+   font: 13px/18px 'Open Sans', serif;
+   text-shadow: 0 1px #FFFFFF;
    border: 0 none;
+   box-shadow: -1px 1px 2px #dddddd;
 }
 #maxui-container a {
     color: #007BC0;
